style.css
*,
*::before,
*::after {
  box-sizing: border-box;
}

:root {
  --purple: #58355e;
  --blue: #87bcde;
  --green: #18f2b2;
  --yellow: #ffc600;
  --pink: #b09398;
  --grey: rgb(189, 186, 186);
}

body {
  font-family: "Roboto", serif;
  font-size: 1.2em;
  margin: 0;
  padding: 0;
  background-color: var(--purple);
  color: var(--grey);
}

a {
  display: block;
  color: black;
  background-color: var(--blue);
  text-decoration: none;
  transform: skewX(-15deg);
  padding: 7px 12px;
}

a:hover,
a:focus {
  display: block;
  color: var(--yellow);
  cursor: pointer;
}

a:active {
  transform: skewX(15deg);
}

header {
  width: 100%;
  height: 100px;
}

.options {
  font-size: 0.7em;
  display: block;
  text-align: center;
  margin-left: 30px;
  background: none;
  color: var(--grey);
  transform: skewX(-15deg);
  width: 150px;
}

nav {
  width: 90%;
  padding: 20px;
  margin: auto;
}

nav ul {
  background: var(--pink);
  border-right: 3px solid var(--yellow);
  box-shadow: -10px 10px 0px var(--pink);
  width: 100%;
  padding: 0.8em 0.8em 0.3em;
  display: flex;
  justify-content: space-around;
  align-items: center;
  list-style: none;
  margin: 0;
}

#pop-up {
  display: none;
  position: absolute;
  width: 80%;
  height: 50%;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  background-color: var(--blue);
}

#pop-up:target {
  display: block;
}

h1,
h2,
h3 {
  font-family: "Shadows Into Light", serif;
  color: black;
}

h1 {
  font-size: 120px;
  line-height: 1.2;
  margin: 20px;
  background-color: var(--green);
  border-top-right-radius: 0.8em;
  border-bottom-left-radius: 0.8em;
  box-shadow: -2px 2px 10px rgba(0, 0, 0, 0.6);
}

h2 {
  text-transform: uppercase;
  padding: 10px 30px;
  background-color: var(--yellow);
  border-top-left-radius: 0.8em;
  border-bottom-right-radius: 0.8em;
  width: fit-content;
}

h3 {
  width: 100%;
  background-color: var(--pink);
  text-align: center;
}

img {
  display: block;
  max-width: 70%;
  margin: auto;
  box-shadow: -10px 10px 0px var(--pink);
}

#hero {
  width: 100%;
  height: 100%;
  text-align: center;
}

.text-container {
  position: relative;
  top: 0;
  height: 90vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  z-index: -1;
}

#hero-text {
  width: 100%;
}

#hero-text p {
  display: inline-block;
  padding: 0 20px;
}

#about {
  width: 100%;
  height: 100%;
}

.title-container {
  display: flex;
  justify-content: center;
}

.about-paragraphs {
  padding: 20px;
}

.item {
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: 520px;
}

.project-links {
  text-align: center;
  margin: 20px auto;
  width: 150px;
}

.project-links a {
  margin: 5px;
}

